--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gta5_outfit_builder",
+  "homepage": "/gta5_outfit_builder/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,7 +37,9 @@
   },
   "description": "GTA 5 Outfit Building Tool.",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "author": "",
   "license": "ISC"
 }
