--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gta5_outfit_builder",
-  "homepage": "/gta5_outfit_builder/",
+  "homepage": "https://polarized0.github.io/gta5_outfit_builder/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
